networking/infoblox/base/template.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: infoblox-infoblox-dns-webhook
  labels:
    app.kubernetes.io/name: infoblox-dns-webhook
    app.kubernetes.io/instance: infoblox
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: infoblox-dns-webhook
    app.kubernetes.io/instance: infoblox
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infoblox-infoblox-dns-webhook
  labels:
    app.kubernetes.io/name: infoblox-dns-webhook
    app.kubernetes.io/instance: infoblox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: infoblox-dns-webhook
      app.kubernetes.io/instance: infoblox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: infoblox-dns-webhook
        app.kubernetes.io/instance: infoblox
    spec:
      serviceAccountName: infoblox-infoblox-dns-webhook
      securityContext:
        {}
      containers:
        - name: infoblox-dns-webhook
          securityContext:
            {}
          image: "ghcr.io/middlewaregruppen/infoblox-dns-webhook/infoblox-dns-webhook:sha-1136728"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          #livenessProbe:
          #  httpGet:
          #    path: /health
          #    port: http
          #readinessProbe:
          #  httpGet:
          #    path: /health
          #    port: http
          volumeMounts:
          - name: infoblox-dns-webhook-tls
            mountPath: /etc/certs
          resources:
            {}
      volumes:
      - name: infoblox-dns-webhook-tls
        secret:
          secretName: infoblox-dns-webhook-tls
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: infoblox-dns-webhook-ingress-mutation
webhooks:
  - name: infoblox-dns-webhook.mutation.actions-runner-system.svc
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: NotIn
          values: [ "kube-system", "actions-runner-system" ]
    rules:
      - operations: [ "CREATE", "UPDATE", "DELETE" ]
        apiGroups: [ "networking.k8s.io" ]
        apiVersions: [ "v1" ]
        resources: [ "ingresses" ]
        scope: "Namespaced"
    clientConfig:
      caBundle: 
      service:
        namespace: actions-runner-system
        name: infoblox-dns-webhook
        path: "/mutate"
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 30
---
apiVersion: v1
kind: Pod
metadata:
  name: "infoblox-infoblox-dns-webhook-test-connection"
  labels:
    app.kubernetes.io/name: infoblox-dns-webhook
    app.kubernetes.io/instance: infoblox
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['infoblox-infoblox-dns-webhook:443']
  restartPolicy: Never
